--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                 extend: {
                     fontFamily: {
                         lexend: ["Lexend Deca", "sans-serif"],
+                        poppins: ["Poppins", "sans-serif"]
                     }
                 }
             }
@@ -118,13 +119,105 @@
             </div>
         </nav>
     </div>
-    <div class="flex flex-col h-full w-full items-center justify-center">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTYx2cgHlUmO1YPFaJBiBwK7S6u5bqa51yIK8pdJ-hsw&s"
-            alt="">
+    <div class="flex flex-col h-full w-full items-center justify-between">
+        <div class="flex flex-col h-full w-full items-center justify-center">
+            <div class="flex flex-col bg-[#2C2E31] h-full w-[780px] font-poppins font-regular text-[12px] items-center justify-center mt-8 rounded-lg">
+                <div class="flex flex-row items-center justify-center py-2 gap-8">
+                    <div id="left-bar" class="flex flex-row gap-4">
+                        <button id="punctuation-icon"
+                            class="fill-[#646669] hover:fill-[#D1D0C5] focus:fill-[#E2B714] text-[#646669] hover:text-[#D1D0C5] focus:text-[#E2B714] transition-all flex flex-row items-center justify-center text-center gap-1.5">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="14" viewBox="0 0 24 24">
+                                <path
+                                    d="M22.596 20.093a11.435 11.435 0 0 1-4.48 2.943l-.08.025c-1.634.594-3.52.938-5.486.938h-.1h.005l-.189.001c-1.766 0-3.456-.327-5.012-.923l.096.032a11.476 11.476 0 0 1-3.93-2.474l.004.003a11.005 11.005 0 0 1-2.502-3.719l-.026-.073a12.447 12.447 0 0 1-.895-4.676l.001-.152v.008l-.001-.113c0-1.686.361-3.288 1.01-4.733l-.029.073a11.961 11.961 0 0 1 2.669-3.808l.004-.004A12.488 12.488 0 0 1 7.535.938l.084-.03C9.024.334 10.655.001 12.363.001h.098h-.005h.041c1.52 0 2.986.234 4.363.668l-.103-.028a11.174 11.174 0 0 1 3.724 1.951l-.023-.017a9.546 9.546 0 0 1 2.552 3.17l.025.055A9.935 9.935 0 0 1 24 10.364v-.012l.002.187a9.968 9.968 0 0 1-.559 3.301l.021-.07a7.526 7.526 0 0 1-1.443 2.494l.007-.009a5.856 5.856 0 0 1-2.015 1.485l-.037.015a5.973 5.973 0 0 1-2.409.498h-.018h.001a3.301 3.301 0 0 1-2.099-.617l.01.007a1.894 1.894 0 0 1-.782-1.534v-.015v.001h-.16a5.285 5.285 0 0 1-1.48 1.456l-.02.012a4.256 4.256 0 0 1-2.487.697h.007a4.182 4.182 0 0 1-3.418-1.447l-.005-.005a5.676 5.676 0 0 1-1.205-3.79v.013c.001-.96.167-1.88.473-2.735l-.018.057a7.648 7.648 0 0 1 1.312-2.37l-.011.014a6.69 6.69 0 0 1 1.985-1.643l.035-.017a5.369 5.369 0 0 1 2.612-.626h-.004a3.96 3.96 0 0 1 2.109.525l-.019-.01c.503.281.89.717 1.103 1.242l.006.017h.032l.262-1.291h2.903l-1.28 6.101c-.043.3-.102.632-.177 1.002c-.069.31-.11.666-.113 1.032v.002l-.001.063c0 .314.08.61.22.868l-.005-.01a.87.87 0 0 0 .834.369h-.004a2.439 2.439 0 0 0 2.099-1.341l.006-.014a6.858 6.858 0 0 0 .829-3.659l.001.016l.001-.155c0-1.183-.241-2.31-.676-3.335l.021.056a7.078 7.078 0 0 0-1.801-2.513l-.007-.006a7.747 7.747 0 0 0-2.698-1.517l-.055-.015a11.087 11.087 0 0 0-3.378-.515l-.115.001h.006l-.122-.001a9.55 9.55 0 0 0-3.707.744l.063-.024A8.63 8.63 0 0 0 5.715 5.34l-.003.003a9.081 9.081 0 0 0-1.854 2.938l-.021.062a10.524 10.524 0 0 0-.675 3.747c0 1.372.257 2.684.727 3.89l-.025-.073a8.406 8.406 0 0 0 1.968 2.917l.003.003a8.597 8.597 0 0 0 2.972 1.835l.06.019c1.114.406 2.4.641 3.741.641l.144-.001h-.007a11.131 11.131 0 0 0 4.62-.865l-.074.027a12.562 12.562 0 0 0 3.513-2.331l-.006.006zM12.391 8.356h-.038c-.504 0-.968.169-1.338.455l.005-.004a3.938 3.938 0 0 0-.987 1.128l-.01.019a5.782 5.782 0 0 0-.613 1.491l-.009.041a6.486 6.486 0 0 0-.214 1.609v.004c.002.293.031.578.085.854l-.005-.029c.057.306.171.578.331.817l-.005-.008a1.84 1.84 0 0 0 1.686.851h-.006l.078.001a2.53 2.53 0 0 0 1.431-.44l-.009.006a3.522 3.522 0 0 0 1.004-1.082l.009-.016c.248-.415.446-.895.567-1.405l.007-.035c.106-.421.171-.907.179-1.407v-.005c0-.36-.035-.712-.102-1.052l.006.034a2.7 2.7 0 0 0-.35-.917l.007.012a1.932 1.932 0 0 0-.661-.654l-.009-.005a1.926 1.926 0 0 0-.977-.262l-.066.001h.003z" />
+                            </svg>punctuation
+                        </button>
+                        <button id="numbers-icon"
+                            class="fill-[#646669] hover:fill-[#D1D0C5] focus:fill-[#E2B714] text-[#646669] hover:text-[#c0bc92] focus:text-[#E2B714] transition-all flex flex-row items-center justify-center text-center gap-1.5">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="16" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                    d="M7.487 2.89a.75.75 0 1 0-1.474-.28l-.455 2.388H3.61a.75.75 0 0 0 0 1.5h1.663l-.571 2.998H2.75a.75.75 0 0 0 0 1.5h1.666l-.403 2.114a.75.75 0 0 0 1.474.28l.456-2.394h2.973l-.403 2.114a.75.75 0 0 0 1.474.28l.456-2.394h1.947a.75.75 0 0 0 0-1.5h-1.661l.57-2.998h1.95a.75.75 0 0 0 0-1.5h-1.664l.402-2.108a.75.75 0 0 0-1.474-.28l-.455 2.388H7.085zM6.8 6.498l-.571 2.998h2.973l.57-2.998z"
+                                    clip-rule="evenodd" />
+                            </svg>numbers
+                        </button>
+                    </div>
+                    <span class="font-lexend font-black text-[#323437] text-[12px] -ml-4 -mr-4">|</span>
+                    <div id="middle-bar" class="flex flex-row gap-4">
+                        <button id="time-icon"
+                            class="fill-[#646669] hover:fill-[#D1D0C5] focus:fill-[#E2B714] text-[#646669] hover:text-[#D1D0C5] focus:text-[#E2B714] transition-all flex flex-row items-center justify-center text-center gap-1.5">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="16" viewBox="0 0 32 32">
+                                <path
+                                    d="M16 2C8.4 2 2 8.4 2 16s6.4 14 14 14s14-6.4 14-14S23.6 2 16 2m4.587 20L15 16.41V7h2v8.582l5 5.004z" />
+                                <path fill="none" d="M20.587 22L15 16.41V7h2v8.582l5 5.005z" />
+                            </svg>time
+                        </button>
+                        <button id="words-icon"
+                            class="fill-[#646669] hover:fill-[#D1D0C5] focus:fill-[#E2B714] text-[#646669] hover:text-[#D1D0C5] focus:text-[#E2B714] transition-all flex flex-row items-center justify-center text-center gap-1">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 0 48 48">
+                                <path fill-rule="evenodd"
+                                    d="M24 10a2 2 0 0 1 1.846 1.23l7.483 17.96l.035.084l2.482 5.957a2 2 0 0 1-3.692 1.538L30.167 32H17.833l-1.987 4.77a2 2 0 0 1-3.692-1.54l2.482-5.956a2.01 2.01 0 0 1 .035-.085l7.483-17.958A2 2 0 0 1 24 10Zm-4.5 18h9L24 17.2L19.5 28Z"
+                                    clip-rule="evenodd" />
+                            </svg>words
+                        </button>
+                        <button id="quote-icon"
+                            class="fill-[#646669] hover:fill-[#D1D0C5] focus:fill-[#E2B714] text-[#646669] hover:text-[#D1D0C5] focus:text-[#E2B714] transition-all flex flex-row items-center justify-center text-center gap-1.5">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 0 16 16">
+                                <path
+                                    d="M12 12a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1h-1.388c0-.351.021-.703.062-1.054c.062-.372.166-.703.31-.992c.145-.29.331-.517.559-.683c.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992a4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 9 7.558V11a1 1 0 0 0 1 1h2Zm-6 0a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1H4.612c0-.351.021-.703.062-1.054c.062-.372.166-.703.31-.992c.145-.29.331-.517.559-.683c.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992a4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 3 7.558V11a1 1 0 0 0 1 1h2Z" />
+                            </svg>quote
+                        </button>
+                        <button id="zen-icon"
+                            class="fill-[#646669] hover:fill-[#D1D0C5] focus:fill-[#E2B714] text-[#646669] hover:text-[#D1D0C5] focus:text-[#E2B714] transition-all flex flex-row items-center justify-center text-center gap-1.5">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="12" viewBox="0 0 640 512">
+                                <path
+                                    d="m634.92 462.7l-288-448C341.03 5.54 330.89 0 320 0s-21.03 5.54-26.92 14.7l-288 448a32.001 32.001 0 0 0-1.17 32.64A32.004 32.004 0 0 0 32 512h576c11.71 0 22.48-6.39 28.09-16.67a31.983 31.983 0 0 0-1.17-32.63zM320 91.18L405.39 224H320l-64 64l-38.06-38.06L320 91.18z" />
+                            </svg>zen
+                        </button>
+                        <button id="setting-icon"
+                            class="fill-[#646669] hover:fill-[#D1D0C5] focus:fill-[#E2B714] text-[#646669] hover:text-[#D1D0C5] focus:text-[#E2B714] transition-all flex flex-row items-center justify-center text-center gap-1.5">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="16" viewBox="0 0 16 16">
+                                <path fill="currentColor" fill-rule="evenodd"
+                                    d="M11.5 8a3.5 3.5 0 0 0 3.362-4.476c-.094-.325-.497-.39-.736-.15L12.099 5.4a.48.48 0 0 1-.653.033a8.554 8.554 0 0 1-.879-.879a.48.48 0 0 1 .033-.653l2.027-2.028c.24-.239.175-.642-.15-.736a3.502 3.502 0 0 0-4.476 3.427c.018.99-.133 2.093-.914 2.7l-5.31 4.13a2.015 2.015 0 1 0 2.828 2.827l4.13-5.309c.607-.78 1.71-.932 2.7-.914zM3 13.75a.75.75 0 1 0 0-1.5a.75.75 0 0 0 0 1.5"
+                                    clip-rule="evenodd" />
+                            </svg>custom
+                        </button>
+                    </div>
+                    <span class="font-lexend font-black text-[#323437] text-[12px] -ml-4 -mr-4">|</span>
+                    <div id="right-bar" class="flex flex-row gap-4">
+                        <button id="15-icon"
+                            class="fill-[#646669] hover:fill-[#D1D0C5] focus:fill-[#E2B714] text-[#646669] hover:text-[#D1D0C5] focus:text-[#E2B714] transition-all flex flex-row items-center justify-center text-center gap-1.5">
+                            15
+                        </button>
+                        <button id="30-icon"
+                            class="fill-[#646669] hover:fill-[#D1D0C5] focus:fill-[#E2B714] text-[#646669] hover:text-[#D1D0C5] focus:text-[#E2B714] transition-all flex flex-row items-center justify-center text-center gap-1.5">
+                            30
+                        </button>
+                        <button id="60-icon"
+                            class="fill-[#646669] hover:fill-[#D1D0C5] focus:fill-[#E2B714] text-[#646669] hover:text-[#D1D0C5] focus:text-[#E2B714] transition-all flex flex-row items-center justify-center text-center gap-1.5">
+                            60
+                        </button>
+                        <button id="120-icon"
+                            class="fill-[#646669] hover:fill-[#D1D0C5] focus:fill-[#E2B714] text-[#646669] hover:text-[#D1D0C5] focus:text-[#E2B714] transition-all flex flex-row items-center justify-center text-center gap-1.5">
+                            120
+                        </button>
+                        <button id="custom-icon"
+                            class="fill-[#646669] hover:fill-[#D1D0C5] focus:fill-[#E2B714] text-[#646669] hover:text-[#D1D0C5] focus:text-[#E2B714] transition-all flex flex-row items-center justify-center text-center gap-1.5">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="16" viewBox="0 0 16 16">
+                                <path fill="currentColor" fill-rule="evenodd"
+                                    d="M15 4.5A3.5 3.5 0 0 1 11.435 8c-.99-.019-2.093.132-2.7.913l-4.13 5.31a2.015 2.015 0 1 1-2.827-2.828l5.309-4.13c.78-.607.932-1.71.914-2.7L8 4.5a3.5 3.5 0 0 1 4.477-3.362c.325.094.39.497.15.736L10.6 3.902a.48.48 0 0 0-.033.653c.271.314.565.608.879.879a.48.48 0 0 0 .653-.033l2.027-2.027c.239-.24.642-.175.736.15c.09.31.138.637.138.976M3.75 13a.75.75 0 1 1-1.5 0a.75.75 0 0 1 1.5 0"
+                                    clip-rule="evenodd" />
+                                <path fill="currentColor"
+                                    d="M11.5 9.5c.313 0 .62-.029.917-.084l1.962 1.962a2.121 2.121 0 0 1-3 3l-2.81-2.81l1.35-1.734c.05-.064.158-.158.426-.233c.278-.078.639-.11 1.062-.102zM5 4l1.446 1.445a2.256 2.256 0 0 1-.047.21c-.075.268-.169.377-.233.427l-.61.474L4 5H2.656a.25.25 0 0 1-.224-.139l-1.35-2.7a.25.25 0 0 1 .047-.289l.745-.745a.25.25 0 0 1 .289-.047l2.7 1.35A.25.25 0 0 1 5 2.654z" />
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div>
         <footer class="w-full ">
-            <div class="flex flex-col font-lexend font-normal text-xs text-[#646669] items-center justify-center gap-3 relative -ml-8">
+            <div
+                class="flex flex-col font-lexend font-normal text-xs text-[#646669] items-center justify-center gap-3 relative -ml-8">
                 <div class="flex flex-col items-center justify-between mb-20 gap-3 bottom-0 fixed">
                     <div id="upper-footer-1" class="flex flex-row gap-2">
                         <p class="bg-[#646669] text-[#323437] px-1 rounded-sm">tab</p>
@@ -141,9 +234,9 @@
                         <p>- command line</p>
                     </div>
                 </div>
-                <div class="flex flex-row items-center justify-between mb-8 gap-[460px] bottom-0 fixed">
+                <div class="flex flex-row items-center justify-between mb-8 gap-[440px] bottom-0 fixed">
                     <div id="footer-left"
-                        class="flex flex-row font-lexend font-medium text-xs items-center justify-center gap-3 -ml-8">
+                        class="flex flex-row font-lexend font-regular text-xs items-center justify-center gap-3 -ml-8">
                         <button id="contact-icon"
                             class="fill-[#646669] hover:fill-[#D1D0C5] text-[#646669] hover:text-[#D1D0C5] transition-all flex flex-row items-center justify-center text-center gap-1">
                             <svg xmlns="http://www.w3.org/2000/svg" height="16" viewBox="0 0 32 32">
@@ -202,7 +295,7 @@
                         </button>
                     </div>
                     <div id="footer-right"
-                        class="flex flex-row font-lexend font-medium text-xs items-center justify-center gap-3">
+                        class="flex flex-row font-lexend font-regular text-xs items-center justify-center gap-3">
                         <button id="theme-icon"
                             class="fill-[#646669] hover:fill-[#D1D0C5] text-[#646669] hover:text-[#D1D0C5] transition-all flex flex-row items-center justify-center text-center gap-1">
                             <svg xmlns="http://www.w3.org/2000/svg" height="16" viewBox="0 0 24 24">
