--- a/index.html
+++ b/index.html
@@ -236,10 +236,10 @@
         </div>
     </div>
     <div>
-        <footer class="w-full ">
+        <footer class="w-full flex absolute items-center justify-center mt-60 bottom-0">
             <div
                 class="flex flex-col font-lexend font-normal text-xs text-[#646669] items-center justify-center gap-3 relative -ml-8">
-                <div class="flex flex-col items-center justify-between mb-20 gap-3 bottom-0 fixed">
+                <div class="flex flex-col items-center justify-between mb-8 gap-3 bottom-0">
                     <div id="upper-footer-1" class="flex flex-row gap-2">
                         <p class="bg-[#646669] text-[#323437] px-1 rounded-sm">tab</p>
                         <p>- restart test</p>
@@ -255,7 +255,7 @@
                         <p>- command line</p>
                     </div>
                 </div>
-                <div class="flex flex-row items-center justify-between mb-8 gap-[440px] bottom-0 fixed">
+                <div class="flex flex-row items-center justify-between mb-8 gap-[440px] bottom-0">
                     <div id="footer-left"
                         class="flex flex-row font-lexend font-regular text-xs items-center justify-center fill-[#646669] text-[#646669] gap-3 -ml-8">
                         <button id="contact-icon"
@@ -336,28 +336,6 @@
             </div>
         </footer>
     </div>
-
-    <div id="language-modal" class="fixed left-0 top-0 bg-black bg-opacity-40 w-screen h-screen items-center justify-center opacity-0 hidden transition-opacity duration-500">
-        <div class="bg-white rounded shadow-md p-8 w-[25%] gap-5 flex-col overflow-hidden">
-          <div class="flex gap-3">
-            <div class="bg-red-100 rounded-full text-red-600 min-w-10 h-10 flex items-center justify-center">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126ZM12 15.75h.007v.008H12v-.008Z" />
-              </svg>
-            </div>
-            <div class="flex-grow">
-              <h1 class="font-bold text-lg mb-2 text-gray-700">Delete Contact?</h1>
-              <p class="text-gray-600">Are you sure you want to delete this contact?</p>
-            </div>
-          </div>
-          <div class=" mt-3 flex justify-end">
-            <button class="bg-white rounded px-4 py-2 mr-3 text-black cursor-pointer hover:bg-gray-300">Batal</button>
-            <form class="flex">
-              <a href="" class="bg-red-600 hover:bg-red-700 text-white font-semibold px-4 py-2 rounded">Hapus</a>
-            </form>
-          </div>
-        </div>
-      </div>
 </body>
 
 </html>
