--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <textarea id="message" rows="5"
                 class="p-2.5 w-full font-poppins font-regular bg-[#323437] text-[#D1D0C5] placeholder-[#D1D0C5] resize-none overflow-hidden text-[24px] outline-none rounded-lg focus:placeholder-[#D1D0C5]"
                 readonly
-                placeholder='"Beri aku 1000 orang tua, niscaya akan kucabut semeru dari akarnya, beri aku 10 pemuda, niscaya akan kuguncang dunia”. -Bung Karno'></textarea>
+                placeholder='"Beri Aku 1000 Orang Tua, Niscaya akan Kucabut Semeru dari Akarnya, Beri Aku 10 Pemuda, Niscaya akan Kuguncang Dunia." -Bung Karno'></textarea>
         </div>
     </div>
     <div>
